--- a/webapp/src/main/webapp/WEB-INF/messages.properties
+++ b/webapp/src/main/webapp/WEB-INF/messages.properties
@@ -32,6 +32,7 @@ error.checkdigits=Invalid checkdigit for {0}
 error.checkdigits.verbose=The check digit on {0} is invalid.  Please double check this patient
 error.checkdigits.unallowed=The identifier {0} is not allowed for validator {1}
 error.concept=Invalid concept
+error.drugAndOrderConcept.mismatch = Mismatches between OrderConcept and DrugConcept
 error.character.invalid=Invalid character `{0}` found in non-checkdigit identifier {1}
 error.date=Invalid date
 error.number=Not a valid number
