--- a/webapp/src/main/webapp/WEB-INF/messages.properties
+++ b/webapp/src/main/webapp/WEB-INF/messages.properties
@@ -33,6 +33,7 @@ error.checkdigits.verbose=The check digit on {0} is invalid.  Please double chec
 error.checkdigits.unallowed=The identifier {0} is not allowed for validator {1}
 error.concept=Invalid concept
 error.drugAndOrderConcept.mismatch = Mismatches between OrderConcept and DrugConcept
+error.drug.noConcept = The drug has no concept defined
 error.character.invalid=Invalid character `{0}` found in non-checkdigit identifier {1}
 error.date=Invalid date
 error.number=Not a valid number
@@ -2147,7 +2148,6 @@ Program.conversion.deleteSelected=Delete selected Triggered State Conversion(s)
 Program.error.invalidDate=A completion date cannot be before an enrollment date
 Program.initialStates=Initial States
 Program.delete=Delete Selected Program(s)
-Program.program=Program
 Program.nonedeleted=No Programs deleted
 
 PatientProgram.error.outcomeRequired=Patient outcome is required when completion date is set
